@@ -8,6 +8,8 @@ python-apt (0.9.0) UNRELEASED; urgency=low
 
   [ Julian Andres Klode ]
   * Completely remove all old-API support code
+  * aptsources/sourceslist.py
+    - Document correct use of uniq and hide it using __all__ (Closes: #723815)
 
   [ Jeremy Bicha ]
   * data/templates/Ubuntu.info.in: add 'devel' series (Closes: #722961)
